# st7p

./: LICENSE  README.md  setup.cfg
scripts/: per_pin_settings.py  tf_reader.py  thermal_per_pin_data_format.py
st7p/: __main__.py  config.py  levels.py  pins.py  testflow.py  timing.py  vectors.py
