[metadata]
name = st7p-sbaby171
version = 0.0.1
author = Max Sbabo
author_email = maximillian.sbabo@gmail.com
description = A collection of SmarTest7 parsers 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sbaby171/st7p
project_urls =
    Bug Tracker = https://github.com/sbaby171/st7p/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = st7p
